--- a/analise.ipynb
+++ b/analise.ipynb
@@ -35,8 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadados = pd.read_excel(r\"C:\\Users\\Nexodata\\Documents\\performance\\base_atendimento.xlsx\",sheet_name='Metadados')\n",
-    "dados = pd.read_excel(r\"C:\\Users\\Nexodata\\Documents\\performance\\base_atendimento.xlsx\",sheet_name='Base')"
+    "metadados = pd.read_excel(r\"C:\\Documents\\performance\\base_atendimento.xlsx\",sheet_name='Metadados')\n",
+    "dados = pd.read_excel(r\"C:\\Documents\\performance\\base_atendimento.xlsx\",sheet_name='Base')"
    ]
   },
   {
